# transcriptio

./: .release-please-config.json  .release-please-manifest.json  Cargo.toml  README.md  crates.js  index.html  release-please-config.json  search-index.js  source-files.js  webvtt.ungram
.github/release-please/: config.json  manifest.json
.github/workflows/: ci.yml  release-please.yml  releases.yml
anstream/: trait.RawStream.html
anstream/adapter/: struct.StrippedStr.html
clap/: enum.ArgAction.html  index.html  struct.Arg.html  struct.Command.html  struct.Id.html
clap/builder/: enum.ArgAction.html  struct.Arg.html  struct.Command.html  struct.OsStr.html  struct.Str.html  struct.StyledStr.html  struct.ValueParser.html  struct.ValueRange.html  trait.IntoResettable.html  trait.ValueParserFactory.html
clap/error/: struct.Error.html
clap_builder/: index.html  struct.Id.html
clap_builder/builder/: enum.ArgAction.html  struct.Arg.html  struct.Command.html  struct.OsStr.html  struct.Str.html  struct.StyledStr.html  struct.ValueParser.html  struct.ValueRange.html  trait.IntoResettable.html  trait.ValueParserFactory.html
clap_builder/error/: struct.Error.html
codegen/: all.html  fn.ensure_file_contents.html  fn.format_rust.html  fn.project_root.html  index.html  sidebar-items.js
codegen/syntax/: fn.ast_nodes.html  index.html  sidebar-items.js  struct.SyntaxKind.html
codegen/utils/: fn.ensure_file_contents.html  fn.format_rust.html  fn.project_root.html
countme/: all.html  fn.enable.html  fn.get.html  fn.get_all.html  index.html  struct.AllCounts.html  struct.Count.html  struct.Counts.html
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  utils.rs
crates/codegen/src/syntax/: ast_nodes.rs  mod.rs  syntax_kind.rs  tokens.rs
crates/codegen/src/syntax/snapshots/: codegen__syntax__ast_nodes__tests__rule_formatting_works.snap
crates/transcriptio/: CHANGELOG.md  Cargo.toml
crates/transcriptio-cli/: CHANGELOG.md  Cargo.toml
crates/transcriptio/src/: lib.rs  vtt.rs
crates/transcriptio/src/syntax/: ast.rs  hand_written.rs  lexer.rs  mod.rs  syntax_kind.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: dist.rs  main.rs
flate2/: struct.CompressError.html  struct.GzBuilder.html
flate2/bufread/: struct.ZlibDecoder.html
hashbrown/: struct.HashMap.html  struct.HashSet.html
hashbrown/hash_map/: struct.HashMap.html  struct.OccupiedError.html
hashbrown/hash_set/: struct.HashSet.html
integration-tests/: Cargo.toml
integration-tests/corpus/: chapters.vtt  comments.vtt  regions.vtt  style-classes-on-element.vtt  targeted-styles.vtt
integration-tests/src/: lib.rs
integration-tests/tests/: corpus.rs
libtest_mimic/: all.html  enum.ColorSetting.html  enum.FormatSetting.html  fn.run.html  index.html  struct.Arguments.html  struct.Conclusion.html  struct.Failed.html  struct.Measurement.html  struct.Trial.html
prettyplease/: all.html  fn.unparse.html  index.html
proc_macro2/: struct.TokenStream.html
quote/: trait.IdentFragment.html  trait.ToTokens.html
regex/: trait.Replacer.html
regex/bytes/: trait.Replacer.html
regex_syntax/: enum.Error.html  struct.UnicodeWordError.html
regex_syntax/ast/: enum.ErrorKind.html  struct.Error.html
regex_syntax/hir/: struct.Hir.html
rowan/: all.html  enum.Direction.html  enum.NodeOrToken.html  enum.TokenAtOffset.html  enum.WalkEvent.html  index.html  struct.Checkpoint.html  struct.Children.html  struct.GreenNode.html  struct.GreenNodeBuilder.html  struct.GreenNodeData.html  struct.GreenToken.html  struct.GreenTokenData.html  struct.NodeCache.html  struct.SyntaxKind.html  struct.SyntaxText.html  struct.TextRange.html  struct.TextSize.html  trait.TextLen.html
rowan/api/: index.html  struct.Preorder.html  (+7 more)
syn/: enum.Expr.html  enum.Fields.html  enum.ForeignItem.html  enum.ImplItem.html  enum.Item.html  enum.Lit.html  enum.Member.html  enum.Pat.html  enum.TraitItem.html  enum.Type.html  enum.UseTree.html  struct.DeriveInput.html  struct.Ident.html  struct.ItemEnum.html  struct.ItemStruct.html
text_size/: all.html  index.html  struct.TextRange.html  struct.TextSize.html  trait.TextLen.html
tracing_attributes/: index.html
tracing_log/: trait.AsLog.html  trait.AsTrace.html
transcriptio/: all.html  index.html  macro.T.html  sidebar-items.js
transcriptio_cli/: all.html  index.html
transcriptio_integration_tests/: all.html  fn.discover_tests.html  index.html  sidebar-items.js
ungrammar/: all.html  enum.Rule.html  fn.rust_grammar.html  index.html  struct.Error.html  struct.Grammar.html  struct.Node.html  struct.NodeData.html  struct.Token.html  struct.TokenData.html  type.Result.html
xtask/: all.html  enum.Command.html  fn.copy.html  fn.main.html  fn.project_root.html  index.html  sidebar-items.js  struct.Args.html
(+269 files in other folders)
