[workspace]
members = [
    "crates/*",
    "integration-tests",
]

[workspace.package]
authors = ["Michael-F-Bryan <michaelfbryan@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Michael-F-Bryan/transcriptio.git"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Michael-F-Bryan/transcriptio.git"
# needed for [workspace.package]
rust-version = "1.67.0"
