[package]
name = "transcriptio-integration-tests"
version = "0.0.0"
publish = false
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
libtest-mimic = "0.6.0"
tracing = "0.1.37"
transcriptio = { version = "0.1.0", path = "../crates/transcriptio" }
walkdir = "2.3.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[[test]]
name = "corpus"
path = "tests/corpus.rs"
harness = false
