[package]
name = "codegen"
version = "0.0.0"
publish = false
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "0.4"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["parsing"] }
ungrammar = "1.16"

[dev-dependencies]
insta = "1.21.0"
