[package]
name = "transcriptio"
description = "Parsers and utilities for subtitle files."
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m_lexer = "0.0.4"
rowan = "0.15.11"
