[package]
name = "xtask"
version = "0.0.0"
description = "Internal utilities used by the transcriptio project"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
once_cell = "1.18.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
